[package]
name = "cli-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
clap = { version = "4.4.18", features = ["derive"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
ssh-rs = "0.5.0"
